--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
       </div><!--container-fluid-->
     </header>
     
+    <nav>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-10 col-md-offset-1">
+            <ul class="list-unstyled list-inline text-right">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    
   </body>
 
 </html>
