--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
               <li><a href="#">About us</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
-          </div>
-        </div>
-      </div>
+          </div><!--col-->
+        </div><!--row-->
+      </div><!--container-fluid-->
     </nav>
     
   </body>
