Se agregaron párrafos

--- a/index.html
+++ b/index.html
@@ -53,6 +53,28 @@
       </div><!--row-->
     </nav>
     
+    <main class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Lorem ipsum dolor.</h2>
+          <p class="lead text-danger">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores sint odit sapiente. Sed alias facilis commodi nam voluptatem nesciunt hic, sint corporis quo, obcaecati perferendis ratione minus rem vel! Voluptatem!
+          </p>
+        </div>
+        <div class="col-md-6">
+          <h2>Lorem ipsum dolor.</h2>
+          <p class="lead text-warning">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita facilis error minima nostrum numquam, praesentium quam possimus dignissimos id, officia vitae totam cum unde consectetur? Asperiores, necessitatibus quos quia voluptate!
+          </p>
+        </div>
+      </div><!--row-->
+      <div class="container-fluid bg-success">
+        <p class="lead text-info">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam modi et inventore deserunt consequatur recusandae, mollitia cumque magni nam ipsa. Repudiandae quo itaque temporibus placeat, neque alias soluta eligendi minus eius atque, officiis cupiditate unde, fuga enim. Perferendis fuga corrupti ex qui quo, dolor consequuntur repudiandae doloremque perspiciatis ullam. Consequuntur ratione asperiores animi officiis distinctio perferendis vero totam corrupti tenetur natus. Assumenda odio quos aspernatur atque officia, dolores ab impedit eius, nobis nulla sint illum. Inventore quaerat in tempore sunt! Suscipit inventore sapiente laboriosam amet nulla voluptas tempore, repudiandae enim mollitia. Fuga vero optio eius, aspernatur officia voluptas ducimus ex.
+        </p>
+      </div>
+    </main>
+    
   </body>
 
 </html>
