--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     <main class="container-fluid">
       <div class="row">
         <div class="col-md-6">
-          <h2>Lorem ipsum dolor.</h2>
+          <h2 class="text-center">Lorem ipsum dolor.</h2>
           <p class="lead text-danger">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores sint odit sapiente. Sed alias facilis commodi nam voluptatem nesciunt hic, sint corporis quo, obcaecati perferendis ratione minus rem vel! Voluptatem!
           </p>
         </div>
         <div class="col-md-6">
-          <h2>Lorem ipsum dolor.</h2>
+          <h2 class="text-center">Lorem ipsum dolor.</h2>
           <p class="lead text-warning">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita facilis error minima nostrum numquam, praesentium quam possimus dignissimos id, officia vitae totam cum unde consectetur? Asperiores, necessitatibus quos quia voluptate!
           </p>
