--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="title col-md-4 text-center">
           <p>Lorem ipsum</p>
         </div>
-        <div class="buttons col-md-4">
+        <div class="buttons col-md-4 text-center">
           <ul class="list-unstyled list-inline">
             <li><a class="button" href="#">Sign in</a></li>
             <li><a class="button" href="#">Sign up</a></li>
